force-app/main/default/objects/Campaign/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Used to specify the address of meeting location.</description>
    <inlineHelpText>This address is used to show google map on ef.com. Please enter only address and not phone numbers or meeting times.</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>