force-app/main/default/objects/Campaign/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <description>this captures the unique integer field value associated with that campaign</description>
    <displayFormat>{0000}</displayFormat>
    <label>Campaign ID</label>
    <startingNumber>1000</startingNumber>
    <type>AutoNumber</type>
</CustomField>