force-app/main/default/objects/Campaign/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The user should be able to select a date only greater than or equal to today and the time.</description>
    <label>Date From</label>
    <type>DateTime</type>
</CustomField>