force-app/main/default/objects/Campaign/fields/DateTo__c.field-meta.xml
<CustomField>
    <fullName>DateTo__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The user should not be allowed to select a date different from that entered in "Date From".</description>
    <label>Date To</label>
    <type>DateTime</type>
</CustomField>