force-app/main/default/objects/Campaign/fields/EFCOMMarket__c.field-meta.xml
<CustomField>
    <fullName>EFCOMMarket__c</fullName>
    <description>Market value for ef.com where this campaign (info meeting) will display</description>
    <label>EF.COM Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>WM</fullName>
            </value>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>