force-app/main/default/objects/Campaign/fields/InfoMeetingID__c.field-meta.xml
<CustomField>
    <fullName>InfoMeetingID__c</fullName>
    <description>Its an autonumber field to link each campaign with a unique integer value</description>
    <displayFormat>{0000}</displayFormat>
    <label>Info Meeting ID</label>
    <type>AutoNumber</type>
</CustomField>