force-app/main/default/objects/Campaign/fields/Invited__c.field-meta.xml
<CustomField>
    <fullName>Invited__c</fullName>
    <description>This field is used to show the count of Info Meeting Members that are in status Invited.</description>
    <label>Invited</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Invited</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>