force-app/main/default/objects/Campaign/fields/IsUP__c.field-meta.xml
<CustomField>
    <fullName>IsUP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is editable only if selected program is AY or AYP.</description>
    <label>Is UP</label>
    <type>Checkbox</type>
</CustomField>