force-app/main/default/objects/Campaign/fields/MeetingCity__c.field-meta.xml
<CustomField 
   >
    <fullName>MeetingCity__c</fullName>
    <description>Displays a list of cities in the market.</description>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A domicile</fullName>
            </value>
            <value>
                <fullName>Aachen</fullName>
            </value>
            <value>
                <fullName>Aalborg</fullName>
            </value>
            <value>
                <fullName>Aalst</fullName>
            </value>
            <value>
                <fullName>Aarau</fullName>
            </value>
            <value>
                <fullName>Abbotsford, BC</fullName>
            </value>
            <value>
                <fullName>Åbent hus</fullName>
            </value>
            <value>
                <fullName>Åbo</fullName>
            </value>
            <value>
                <fullName>Abrantes</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Acapulco</fullName>
            </value>
            <value>
                <fullName>Adana</fullName>
            </value>
            <value>
                <fullName>Adecco</fullName>
            </value>
            <value>
                <fullName>Admont</fullName>
            </value>
            <value>
                <fullName>Adrar</fullName>
                <label>Adrar </label>
            </value>
            <value>
                <fullName>Agen</fullName>
            </value>
            <value>
                <fullName>Agrigento</fullName>
            </value>
            <value>
                <fullName>Agropoli</fullName>
            </value>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Ahwaz</fullName>
            </value>
            <value>
                <fullName>Aïn Defla</fullName>
                <label>Aïn Defla </label>
            </value>
            <value>
                <fullName>Aïn Témouchent</fullName>
                <label>Aïn Témouchent </label>
            </value>
            <value>
                <fullName>Aix en Provence</fullName>
            </value>
            <value>
                <fullName>Aix-Marseille</fullName>
            </value>
            <value>
                <fullName>Ajaccio</fullName>
            </value>
            <value>
                <fullName>Aksay</fullName>
            </value>
            <value>
                <fullName>Aktau</fullName>
            </value>
            <value>
                <fullName>Aktobe</fullName>
            </value>
            <value>
                <fullName>Al Ain</fullName>
            </value>
            <value>
                <fullName>Alajuela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>