force-app/main/default/objects/Campaign/fields/MeetingSize__c.field-meta.xml
<CustomField>
    <fullName>MeetingSize__c</fullName>
    <description>Indicates the total capacity for the meeting.</description>
    <label>Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>