force-app/main/default/objects/Campaign/fields/MeetingType__c.field-meta.xml
<CustomField>
    <fullName>MeetingType__c</fullName>
    <description>Type of meeting</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info Meeting - Offline</fullName>
            </value>
            <value>
                <fullName>Info Meeting - Online</fullName>
            </value>
            <value>
                <fullName>Open House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>