force-app/main/default/objects/Campaign/fields/PosInfoMeeting_id__c.field-meta.xml
<CustomField>
    <fullName>PosInfoMeeting_id__c</fullName>
    <description>This field is to hold InfomeetingId migrated from Poseidon</description>
    <externalId>true</externalId>
    <label>PosInfoMeeting_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>