force-app/main/default/objects/Campaign/fields/PosInfoMeetingID__c.field-meta.xml
<CustomField>
    <fullName>PosInfoMeetingID__c</fullName>
    <description>This field is to hold InfoMeetingId migrated from Poseidon</description>
    <externalId>true</externalId>
    <label>PosInfoMeetingID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>