force-app/main/default/objects/Campaign/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Program of campaign</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Programs</valueSetName>
    </valueSet>
</CustomField>