force-app/main/default/objects/Campaign/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <description>SalesOfficetowhichLeadbelongs</description>
    <label>SalesOffice</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SalesOffice</valueSetName>
    </valueSet>
</CustomField>