force-app/main/default/objects/Campaign/fields/UniqueField__c.field-meta.xml
<CustomField>
    <fullName>UniqueField__c</fullName>
    <defaultValue>''</defaultValue>
    <description>Backend field to check record uniqueness.</description>
    <label>Unique Field</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>