force-app/main/default/objects/Campaign/recordTypes/InfoMeeting.recordType-meta.xml
<RecordType 
   >
    <fullName>InfoMeeting</fullName>
    <active>true</active>
    <description>Info meeting of type Online or offline</description>
    <label>Info Meeting</label>
</RecordType>