force-app/main/default/objects/Campaign/validationRules/BlockUpdatingOfSpecificFields.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockUpdatingOfSpecificFields</fullName>
    <active>true</active>
    <description>Market, Sales Office, Product and Program cannot be updated.</description>
    <errorConditionFormula>And(NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ),ISCHANGED(Market__c  ) ||  ISCHANGED(SalesOffice__c  ) || ISCHANGED(Product__c )|| ISCHANGED( Program__c ))</errorConditionFormula>
    <errorMessage>Market, Sales Office, Product and Program cannot be edited once the meeting is created.</errorMessage>
</ValidationRule>