force-app/main/default/objects/Campaign/validationRules/DateFromAndDateToMustBeSameDay.validationRule-meta.xml
<ValidationRule>
    <fullName>DateFromAndDateToMustBeSameDay</fullName>
    <active>true</active>
    <description>Date shouldn't be different from that entered in "Date From".</description>
    <errorConditionFormula>And(NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ),(DATEVALUE(DateFrom__c ) &lt;>  DATEVALUE(DateTo__c)))</errorConditionFormula>
    <errorMessage>Info Meetings should be created for the same day. Please modify the date and try again.</errorMessage>
</ValidationRule>