force-app/main/default/objects/Campaign/validationRules/DateToGreaterThanDateFrom.validationRule-meta.xml
<ValidationRule>
    <fullName>DateToGreaterThanDateFrom</fullName>
    <active>true</active>
    <description>Time in 'Date To' should be greater than 'Date From'</description>
    <errorConditionFormula>And(NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ),(DateTo__c &lt;= DateFrom__c))</errorConditionFormula>
    <errorMessage>Date To should always be greater than Date From.</errorMessage>
</ValidationRule>