force-app/main/default/objects/Campaign/validationRules/EfFComMandatoryWhenSendToEFComIsChecked.validationRule-meta.xml
<ValidationRule>
    <fullName>EfFComMandatoryWhenSendToEFComIsChecked</fullName>
    <active>true</active>
    <description>EF.COM is mandatory if  Send to EF.COM is checked</description>
    <errorConditionFormula>And(NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ),((ISBLANK(TEXT(EFCOMMarket__c))) &amp;&amp; (SendtoEFCOM__c)))</errorConditionFormula>
    <errorMessage>Please select the EF.COM Market.</errorMessage>
</ValidationRule>