force-app/main/default/objects/Campaign/validationRules/IsUPOnlyAllowedForSpecificPrograms.validationRule-meta.xml
<ValidationRule>
    <fullName>IsUPOnlyAllowedForSpecificPrograms</fullName>
    <active>true</active>
    <description>This field is editable only if the selected program is AY or AYP</description>
    <errorConditionFormula>And(NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ),NOT(ISPICKVAL(Program__c  , 'AY') || ISPICKVAL(Program__c  , 'AYP')) &amp;&amp;  IsUP__c)</errorConditionFormula>
    <errorMessage>'Is UP' is applicable only for Program 'AY' and 'AYP'.</errorMessage>
</ValidationRule>