force-app/main/default/objects/Campaign/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>Program__c</columns>
    <columns>DateFrom__c</columns>
    <columns>DateTo__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>startsWith</operation>
        <value>UP M</value>
    </filters>
    <label>ALL</label>
</ListView>