force-app/main/default/objects/Campaign/listViews/All_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Market__c</columns>
    <columns>SalesOffice__c</columns>
    <columns>Program__c</columns>
    <columns>MeetingCity__c</columns>
    <columns>DateFrom__c</columns>
    <columns>DateTo__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
</ListView>