force-app/main/default/objects/Campaign/listViews/AllActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Market__c</columns>
    <columns>SalesOffice__c</columns>
    <columns>Program__c</columns>
    <columns>MeetingCity__c</columns>
    <columns>DateFrom__c</columns>
    <columns>DateTo__c</columns>
    <columns>Invited__c</columns>
    <columns>Attended__c</columns>
    <columns>MeetingSize__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Info Meetings</label>
</ListView>