force-app/main/default/objects/Campaign/listViews/MyActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>MyActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Market__c</columns>
    <columns>SalesOffice__c</columns>
    <columns>Program__c</columns>
    <columns>MeetingCity__c</columns>
    <columns>DateFrom__c</columns>
    <columns>DateTo__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Active Campaigns</label>
</ListView>